src/snapshots/pielang__test__parse_expression_(quote ctom).snap
---
source: src/test.rs
description: (quote ctom)
expression: parser.parse(e)
---
Ok(
    Literal(
        Span(
            0,
            12,
        ),
        Atom(
            "c",
        ),
    ),
)
