src/snapshots/pielang__test__parse_expression_(quote this-is-a-symbol).snap
---
source: src/test.rs
description: (quote this-is-a-symbol)
expression: parser.parse(e)
---
Ok(
    Literal(
        Span(
            0,
            24,
        ),
        Atom(
            "t",
        ),
    ),
)
