src/snapshots/pielang__test__parse_expression_(λ (x) (add1 x)).snap
---
source: src/test.rs
description: (λ (x) (add1 x))
expression: parser.parse(e)
---
Ok(
    LambdaExpr(
        Span(
            0,
            17,
        ),
        [
            Symbol(
                Span(
                    5,
                    6,
                ),
                "x",
            ),
        ],
        List(
            Span(
                8,
                16,
            ),
            [
                Identifier(
                    Span(
                        9,
                        13,
                    ),
                    "add1",
                ),
                Identifier(
                    Span(
                        14,
                        15,
                    ),
                    "x",
                ),
            ],
        ),
    ),
)
