src/snapshots/pielang__test__parse_expression_01.snap
---
source: src/test.rs
description: "01"
expression: parser.parse(e)
---
Ok(
    Identifier(
        Span(
            0,
            2,
        ),
        "01",
    ),
)
