src/snapshots/pielang__test__parse_expression_1.snap
---
source: src/test.rs
expression: "parser.parse(e).expect(\"parse expression\")"
---
Literal(
    Span(
        0,
        1,
    ),
    Nat(
        1,
    ),
)
