src/snapshots/pielang__test__parse_expression_9876.snap
---
source: src/test.rs
expression: "parser.parse(e).expect(\"parse expression\")"
---
Literal(
    Span(
        0,
        4,
    ),
    Nat(
        9876,
    ),
)
