src/snapshots/pielang__test__parse_expression_n.snap
---
source: src/test.rs
expression: "parser.parse(e).expect(\"parse expression\")"
---
Identifier(
    Span(
        0,
        1,
    ),
    "n",
)
