src/snapshots/pielang__test__parse_expression_nil.snap
---
source: src/test.rs
description: nil
expression: parser.parse(e)
---
Ok(
    Identifier(
        Span(
            0,
            3,
        ),
        "nil",
    ),
)
